--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "core-js": "^3.23.4",
+    "pinia": "^2.0.15",
+    "vue": "^3.2.25",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "less": "^4.1.3",
     "vite": "^2.9.9"
   }
 }
