--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --fix --ext .vue,.js,.jsx src"
+    "lint": "eslint --fix --ext .vue,.js,.jsx src",
+    "prepare": "husky install"
   },
   "dependencies": {
     "core-js": "^3.23.4",
@@ -20,8 +21,20 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.2.0",
+    "husky": "^8.0.1",
     "less": "^4.1.3",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "vite": "^2.9.9"
+  },
+  "lint-staged": {
+    "*.{vue,js,jsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{html,css,less,md}": [
+      "prettier --write"
+    ]
   }
+  
 }
