--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.10",
     "core-js": "^3.23.4",
     "pinia": "^2.0.15",
     "vue": "^3.2.25",
@@ -25,6 +26,8 @@
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "unplugin-auto-import": "^0.9.3",
+    "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.9"
   },
   "lint-staged": {
@@ -35,5 +38,4 @@
       "prettier --write"
     ]
   }
-  
 }
