--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.10",
+    "axios": "^0.27.2",
     "core-js": "^3.23.4",
     "pinia": "^2.0.15",
     "vue": "^3.2.25",
