--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "start": "vite",
+    "test": "vite --mode test",
     "lint": "eslint --fix --ext .vue,.js,.jsx src",
     "prepare": "husky install"
   },
