--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-legacy": "^2.0.0",
+    "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
@@ -31,10 +31,11 @@
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "terser": "^5.14.2",
+    "rollup-plugin-visualizer": "^5.7.1",
     "unplugin-auto-import": "^0.9.3",
     "unplugin-vue-components": "^0.21.1",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-compression": "^0.5.1"
   },
   "lint-staged": {
     "*.{vue,js,jsx}": [
